--- a/src/Components/Input.css
+++ b/src/Components/Input.css
@@ -1,7 +1,3 @@
-.dark input:-webkit-autofill, input:-webkit-autofill  {
-        -webkit-box-shadow: 0 0 0px 1000px var(--md-sys-color-secondary-container) inset;
-        -webkit-text-fill-color: var(--md-sys-color-on-secondary-container) ;
-    }
 
 input:focus{
     /* outline: none;
